[package]
name = "gen-table"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.18.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" , "mysql","chrono"] }
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
clap = "4.3.2"
