[package]
name = "gen-table"
version = "0.1.4"
edition = "2021"
authors = ["daheige"]
description = "gen-table for mysql table convert to rust struct code"
keywords = ["gen-table", "rs-gen", "mysql","gen-code","tbox"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/daheige/rs-tbox"
documentation = "https://docs.rs/gen-table"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.19.0"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls" , "mysql","chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
futures = "0.3.30"
clap = "4.5.1"
serde = { version = "1.0.196",features = ["derive"]}
